Add "maturity" field to ExtractorInfo, and an API method to update it
